Add: Four images in Product Schema
